angular/src/app/components/login/login.component.scss
// SASS imports
@import "_mixins";

.login {
  &-welcome-display {
    @include loginAndGenericDisplay(3.7rem, 400);
    text-align: center;
  }
  &-form-group {
    width: 55rem;

    .mat-form-field {
      &-wrapper {
        display: flex;
        justify-content: center;
        padding-bottom: 0;
      }
      // These media queries help resize the log-in form step component for mobile/responsiveness
      &-flex {
        width: 40%;
        @media (min-width: $sm-breakpoint) {
          width: 50%;
        }
        @media (min-width: $md-breakpoint) {
          width: 60%;
        }
        @media (min-width: $lg-breakpoint) {
          width: 70%;
        }
        @media (min-width: $x-lg-breakpoint) {
          width: 100%;
        }
      }
      &-infix {
        border: 0;
      }
    }
  }
  &-stepper {
    background-color: transparent;
    &-input {
      @include fontSizeAndWeight(4rem, 200);
      text-align: center !important;
      border-bottom: 3px solid #fff !important;
    }
  }
  &-error-message {
    @include fontSizeAndWeight(1.2rem, 400);
    display: flex;
    padding-top: 1rem;
    height: 1.2rem;
    justify-content: center;
    color: #fff;
  }
  &-loading-image {
    height: 3rem;
    display: flex;
    margin: 0 auto;
  }
  &-password-visibility {
    text-align: left !important;
    &-icon {
      font-size: 2rem !important;
    }
  }
  // Fade in animation when transitioning the step forms
  &-fadein-animation {
    -webkit-animation: fadein 3s linear forwards;
    animation: fadein 3s linear forwards;
    opacity: 0;
  }

  @-webkit-keyframes fadein {
    50% {
      opacity: 0.5;
    }
    100% {
      opacity: 1;
    }
  }

  @keyframes fadein {
    50% {
      opacity: 0.5;
    }
    100% {
      opacity: 1;
    }
  }

  &-fadeout-animation {
    -webkit-animation: fadeout 3s linear forwards;
    animation: fadeout 3s linear forwards;
    opacity: 1;
  }

  @-webkit-keyframes fadeout {
    50% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }

  @keyframes fadeout {
    50% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
}

// Angular Material classes
.mat-horizontal-stepper-header-container,
.mat-form-field-underline {
  display: none !important;
}

.mat-form-field-infix {
  padding: 0 !important;
}

.mat-form-field-suffix {
  align-self: flex-end !important;
  width: 2rem;
}

.mat-button-disabled {
  color: #dcd0d0 !important;
}

// Removes the white/yellow colored background for autofill
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  border-bottom: 3px solid #fff;
  -webkit-text-fill-color: #fff;
  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
  box-shadow: 0 0 0px 1000px transparent inset;
  transition: background-color 5000s ease-in-out 0s;
}

